<resources>
    <string name="version_number">版本：1.0</string>
    <string name="app_name">PCO管理</string>
    <string name="wify_net">当前使用的是WIFI网络</string>
    <string name="gprs_net">当前使用的是GPRS网络</string>
    <string name="no_net">当前没有可使用网络</string>
    <string name="jj_warm_prompt">温馨提示</string>
    <string name="jj_sure">确定</string>
    <string name="doing_reset">重置</string>
    <string name="unsupport_bluetooth">该机型不支持蓝牙!</string>
    <string name="logo_init">正在初始化，请稍候&#8230;</string>
    <string name="new_check_point">新增作业点</string>
    <string name="add_point_success">新增作业点成功</string>
    <string name="set_up_reader">设置Reader设备</string>
    <string name="chose_reader">请选择Reader设备</string>
    <string name="searching">正在搜索</string>
    <string name="doing_rereading">重扫</string>
    <string name="bt_chose_reader">请选择Reader：</string>
    <string name="bt_btn_sure">确定</string>
    <string name="bt_btn_search">搜索</string>
    <string name="bt_btn_skip">跳过</string>
    <string name="doing_read_card">刷卡</string>
    <string name="logining">正在登录，请稍候  &#8230;</string>
    <string name="input_name_pwd">请输入用户名和密码！</string>
    <string name="failed_try_again">登录失败，请重试</string>
    <string name="user_name">用户名</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="user_pwd">密码</string>
    <string name="input_user_pwd">请输入密码</string>
    <string name="save_account">记住帐号</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="save_pwd">记住密码</string>
    <string name="select_date">日期：</string>
    <string name="select_type">类型:</string>
    <string name="select_browser">浏览</string>
    <string name="pco_system">PCO管理系统</string>
    <string name="handling">正在处理，请稍候&#8230;</string>
    <string name="failed_read">标签读取失败，请重扫描！</string>
    <string name="net_not_well">网络信号不佳，请重新尝试</string>
    <string name="get_data_faield">获取数据失败，请重试</string>
    <string name="no_weeksheet_data">没有工单信息!</string>
    <string name="bluetooth_prompt">手持机还未连接成功，请确认手持机蓝灯处于常亮状态！</string>
    <string name="reading_card">标签读取中 &#8230;</string>
    <string name="bluetooth_start_failed">蓝牙设备启动失败!</string>
    <string name="read_a_white_card">请扫描一张空白标签！</string>
    <string name="user_card_not_exist">该员工卡不存在</string>
    <string name="check_in_failed">签到失败</string>
    <string name="doing_check"> 签到</string>
	<string name="user_number">编号:</string>
    <string name="submiting">正在提交，请稍候&#8230;</string>
    <string name="excution_feedback">施工反馈:</string>
    <string name="choose_kind">请选择种类</string>
    <string name="doing_finish">完成</string>
    <string name="doing_submit">提交</string>
    <string name="get_custom_data">正在获取客户列表，请稍候&#8230;</string>
    <string name="submit_success">提交成功!</string>
    <string name="tech_support">技术支持</string>
    <string name="doing_continue">继续</string>
    <string name="menu_sop">SOP</string>
    <string name="menu_worksheet">工单</string>
    <string name="menu_report">报表</string>
    <string name="menu_support">支持</string>
    <string name="menu_home">主页</string>
    <string name="message_title">消息</string>
    <string name="menu_kantan">勘探</string>
    <string name="brush_user_card">请刷员工卡</string>
    <string name="add_is_not_finish">新增未完成，在点一次返回退出</string>
    <string name="hand_failed_try_again">处理失败，请重试</string>
    <string name="date_error">日期错误</string>
    <string name="msg_menu">短信</string>
    <string name="send_msg">发送短信</string>
    <string name="send">发送</string>
    <string name="send_failed_chose_tool">发送失败，请选择要发送的工单！</string>
    <string name="msg_has_send">短信已发出</string>
    <string name="error_happened">出现错误</string>
    <string name="msg_has_been_send">短信已发送</string>
    <string name="msg_send_failed">短信发送失败</string>
    <string name="replace_card_success">替换标签成功</string>
    <string name="doing_replace">替换</string>
    <string name="get_data_failed_try_again">获取数据失败，请重新尝试</string>
    <string name="no_location_tag">没有位置标签</string>
    <string name="the_date_no_work_sheet">所选日期没有报表信息!</string>
    <string name="current_no_work_sheet">暂无报表!</string>
    <string name="please_chose_a_customer">请选择一个客户！</string>
    <string name="has_nothing">无</string>
    <string name="cutomer_name">客户名称：</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="check_download">下载</string>
    <string name="scene_people_sign_in">现场人员签到</string>
    <string name="handle_success">操作成功！</string>
    <string name="no_scene_people">本次施工没有现场人员信息！</string>
    <string name="had_sign_in">已经签到过了!</string>
    <string name="doing_success">成功</string>
    <string name="target_pest">防治对象：</string>
    <string name="worksheet_start_time">起始时间:</string>
    <string name="worksheet_gongshi">工&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;时：</string>
    <string name="worksheet_hour">小时</string>
    <string name="worksheet_content">服务内容:</string>
    <string name="worksheet_addr">客户地址:</string>
    <string name="pull_to_refresh_pull_label">下拉更新</string>
    <string name="pull_to_refresh_release_label">释放更新</string>
    <string name="pull_to_refresh_refreshing_label">正在更新</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="btn_d2eprompt_promise">确认</string>
    <string name="btn_d2eprompt_cancle">取消</string>
    <string name="tag_name">标签名称：</string>
    <string name="new_tag_num">新标签号：</string>
    <string name="doing_read">扫描</string>
    <string name="doing_preview">预览</string>
    <string name="d2e_delete">删除</string>
    <string name="choose_delete_way">请选择删除方式</string>
    <string name="way_user_card">刷员工卡</string>
    <string name="sure_delet">您确定要删除吗?</string>
    <string name="delete_succe">删除成功！</string>
    <string name="orignal_card">刷原标签卡</string>
    <string name="handling_wait">正在处理，请稍候&#8230;</string>
    <string name="new_location">新增位置点</string>
    <string name="add_success">添加成功！</string>
    <string name="input_loca_name">请填写名称信息！</string>
    <string name="reader_user_card_failed">读取员工卡错误，或该员未签到成功!</string>
    <string name="read_card_failed">读卡失败，请重新扫描</string>
    <string name="parameter_error">参数错误</string>
    <string name="update_card">更换标签</string>
    <string name="replace_reason">请在备注栏填写替换原因</string>
    <string name="net_failed">网络连接失败</string>
    <string name="web">官网：http://www.ohpest.com</string>
    <string name="copyright">Copyright © 2004–2012 VSI All Rights Reserved.</string>
    <string name="phone">咨询服务热线:4008-123-203</string>
    <string name="neterror">网络连接失败</string>
    <string name="bterror">标签读取失败，请重新尝试</string>
    <string name="check_equip_mouse_bait_station">鼠类诱饵站</string>
    <string name="check_equip_mouse_glue_board">粘鼠板</string>
    <string name="check_equip_rodent_trap">鼠笼</string>
    <string name="check_equip_mouse_trap">鼠夹</string>
    <string name="check_equip_fly_catch">灭虫灯</string>
    <string name="check_equip_insect_catch">捕蝇笼</string>
    <string name="check_equip_bug_catcher">昆虫捕捉器</string>
    <string name="check_equip_bug_glue_plate">粘虫板</string>
    <string name="check_equip_opsite">实施</string>
    <string name="check_equip_monitor">监测</string>
    <string name="check_equip_xjk">白蚁诱饵站</string>
    <string name="check_equip_survey">设备侦测</string>
    <string name="check_equip_facilities_other">其他设施</string>
    <string name="check_equip_opsite_other">其他实施</string>
    <string name="check_equip_facilities_name">设施名称：</string>
    <string name="check_equip_opsite_name">实施名称：</string>
    <string name="pleace_sign_in_first">请先签到!</string>
    <string name="check_equip_facilities_other_state_int">0</string>
    <string name="check_equip_facilities_other_state">作业完成</string>
    <string name="check_equip_opsite_other_state_int">0</string>
    <string name="check_equip_opsite_other_state">作业完成</string>
    <string name="facility">作业</string>
    <string name="implement">监测</string>
    <string name="other">其他</string>
    <string name="now_watch">现场勘探</string>
    <string name="now_reflect">现场反馈</string>
    <string name="help_init">初始化</string>
    <string name="tv_place_data_cust_name">客户名称：</string>
    <string name="tv_customer_type">客户类型：</string>
    <string name="tv_constr_num"> 施工单号：</string>
    <string name="tv_constr_workers">施工人员：</string>
    <string name="et_place_data_client_hint">请选择</string>
    <string name="et_place_data_hint">请填写</string>
    <string name="tv_place_data_coll_date">勘查现场日期:</string>
    <string name="tv_place_data_coll_people">勘查人员:</string>
    <string name="tv_place_data_coll_conn">勘查客户联系人:</string>
    <string name="tv_place_data_coll_addr">客户现场地址:</string>
    <string name="tv_place_data_coll_peitong">客户方陪同人员:</string>
    <string name="tv_mouse_watch">鼠类勘查</string>
    <string name="tv_cockroach_watch">蟑螂勘查</string>
    <string name="tv_fly_insect_watch">飞虫勘查</string>
    <string name="tv_other_insect_watch">现场勘查发现的其他虫害</string>
    <string name="tv_watch_result">重点区域勘查结果</string>
    <string name="btn_submit_data_coll_fun">提交</string>
    <string name="btn_reset_data_coll_fun"></string>
    <string name="btn_back_data_coll_fun">返回</string>
    <string name="weather"> 天气：</string>
    <string name="tv_mouse_watch_kind">现场勘查发现的鼠类</string>
    <string name="tv_mouse_watch_room_in_requ">室内门窗、通道是否符合防鼠要求</string>
    <string name="tv_mouse_trac">室内有否鼠迹</string>
    <string name="tv_mouse_food_drink">室内有否鼠否鼠类的食源、水源</string>
    <string name="tv_mouse_nest_cond">室内有否鼠否鼠类筑巢条件</string>
    <string name="tv_mouse_live_corpse">近期室内有否发现过活鼠/鼠尸</string>
    <string name="tv_room_out_mouse_trac">室外建筑周边有否鼠迹</string>
    <string name="tv_room_out_mouse_food_drink">室外有否鼠类的食源、水源</string>
    <string name="tv_room_out_mouse_nest_cond">室外有否鼠类筑巢条件</string>
    <string name="tv_room_out_has_mouse">近期室外有否发现过鼠类</string>
    <string name="tv_envir_clean">环境保洁制度是否完善</string>
    <string name="tv_equip_match_requ">卫生设施是否符合防鼠要求</string>
    <string name="tv_things_be_breaked">客户方建筑及物品是否遭到鼠类侵害</string>
    <string name="tv_pipe_line_invade_mouse">客户方生产流程有否鼠类入侵风险</string>
    <string name="tv_mouse_preve_cure">客户方有否鼠害综合防制的理念</string>
    <string name="tv_mouse_preve_cure_equip">客户方有否鼠类预防设施</string>
    <string name="btn_save_mouse_watch">保存</string>
    <string name="btn_reset_mouse_watch"></string>
    <string name="btn_back_mouse_watch">返回</string>
    <string name="position_card">位置标签：</string>
    <string name="d2e_location_label">位置标签</string>
    <string name="work_finish">您的检查工作已经全部完成，请点击提交</string>
    <string name="check_point">作&#160;&#160;业&#160;&#160;点：</string>
    <string name="survey_point">监&#160;&#160;测&#160;&#160;点：</string>
    <string name="tv_cockroach_watch_kind">现场勘察时发现的蟑螂</string>
    <string name="tv_cockroach_watch_room_in_find">室内水池、灶台、电器等区域有否蟑迹</string>
    <string name="tv_cockroach_room_in_seal">室内食品、仓储区域是否密封</string>
    <string name="tv_cockroach_room_in_furni_find">室内各种管线、橱柜、家具有否蟑迹</string>
    <string name="tv_cockroach_room_in_curr_find">近期室内有否发现过蟑螂</string>
    <string name="tv_cockroach_room_in_requ">室内门窗、通道、墙壁缝隙是否符合防蟑螂要求</string>
    <string name="tv_cockroach_watch_syst_perf">环境保洁制度是否完善</string>
    <string name="tv_cockroach_watch_hygiene_requ">卫生设施是否符合防蟑螂的要求</string>
    <string name="tv_cockroach_watch_pipeline_risk">客户方生产流程有否蟑螂入侵风险</string>
    <string name="d2e_check_memo">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注：</string>
    <string name="dialog_btn_yes_text">确定</string>
    <string name="add_tag_num">标签编号：</string>
    <string name="add_tage_name">名称：</string>
    <string name="add_device_type">设备类型：</string>
    <string name="add_remarks">备注：</string>
    <string name="check_devic_name">设备名称：</string>
    <string name="check_device_state">设备状态：</string>
	<string name="add_user">添加</string>
	<string name="check_in_sub">提交</string>
</resources>