<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <TextView
        style="@style/text_content_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_tag_num"
        android:textSize="20sp" />

    <TextView
        android:id="@id/location_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:focusable="false"
        android:textSize="20sp" />

    <TextView
        style="@style/text_content_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_tage_name"
        android:textSize="20sp" />

    <EditText
        android:id="@id/location_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@id/btn_yes"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:text="@string/dialog_btn_yes_text"
            android:textColor="#000000" />

        <Button
            android:id="@id/btn_clear"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:text="@string/doing_reset"
            android:textColor="#000000" />

        <Button
            android:id="@id/btn_retry"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:text="@string/doing_rereading"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>