<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!--
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:textSize="20sp"
        android:text="当前标签编号:" />
        
    <TextView 
        android:layout_marginTop="4dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:text="000123"
        android:gravity="left"
        android:layout_marginBottom="4dp"
        android:id="@id/location_id" />
    -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_name"
        android:textSize="20sp" />

    <EditText
        android:id="@id/location_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sop_edit_login" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_tag_num"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/tag_new"
            style="@style/loginpage_EditText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doing_read" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp" >

        <Button
            android:id="@id/btn_yes"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:text="@string/jj_sure"
            android:textColor="#000000" />

        <Button
            android:id="@id/btn_clear"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:text="@string/doing_reset"
            android:textColor="#000000" />

        <Button
            android:id="@id/btn_retry"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:text="@string/doing_rereading"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>