<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1.0"
    android:background="@drawable/login_bg"
    android:scrollbarThumbVertical="@drawable/trans" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="400dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tag_num"
            android:textSize="20sp" 
          	style="@style/text_content_white"
            />

        <TextView
            android:id="@id/location_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:textSize="20sp" />

        <TextView
            style="@style/text_content_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tage_name"
            android:textSize="20sp" />

        <EditText
            android:id="@id/location_name"
            style="@style/loginpage_EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sop_edit_login" />

        <TextView
            style="@style/text_content_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_device_type"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@id/ckpoint_state"
                style="@style/loginpage_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/sop_edit_login"
                android:editable="false" />

            <Button
                android:id="@id/loginImageButton02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ckpoint_state"
                android:layout_alignRight="@id/ckpoint_state"
                android:layout_alignTop="@id/ckpoint_state"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/more_select" />
        </RelativeLayout>

        <TextView
            style="@style/text_content_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_remarks"
            android:textSize="20sp" />

        <EditText
            android:id="@id/location_memo"
            style="@style/loginpage_EditText"
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:layout_gravity="top"
            android:background="@drawable/sop_edit_login"
            android:gravity="top"
            android:maxLines="15"
            android:scrollbars="vertical"
            android:singleLine="false" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/btn_yes"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_weight="1.0"
                android:text="@string/dialog_btn_yes_text"
                android:textColor="#000000" />

            <Button
                android:id="@id/btn_clear"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_weight="1.0"
                android:text="@string/doing_reset"
                android:textColor="#000000" />

            <Button
                android:id="@id/btn_retry"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_weight="1.0"
                android:text="@string/doing_rereading"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>