<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000"
    android:gravity="center_horizontal" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lay_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="0.0dip"
            android:text="@string/bt_chose_reader"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/read_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="0.0dip"
            android:paddingRight="14.0dip"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <Button
            android:id="@+id/bt_select_btn"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:text="@string/bt_btn_sure" />

        <Button
            android:id="@+id/bt_query_btn"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:text="@string/bt_btn_search" />

        <Button
            android:id="@+id/bt_enter_btn"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:text="@string/bt_btn_skip" />
    </LinearLayout>

    <ListView
        android:id="@+id/devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lay_bottom"
        android:layout_below="@id/lay_top"
        android:layout_gravity="center" />

</RelativeLayout>