<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#17478f"
    android:orientation="vertical"
    android:paddingBottom="10.0dip"
    android:paddingLeft="10.0dip"
    android:paddingRight="10.0dip"
    android:paddingTop="10.0dip" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/main_screen_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10.0dip"
        android:textColor="@color/white"
        android:textSize="18.0sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5.0dip"
        android:autoLink="web"
        android:text="@string/web"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10.0dip"
        android:autoLink="none"
        android:text="@string/phone"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10.0dip"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

</LinearLayout>