<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@id/d2e_check_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:clickable="true"
        android:fadingEdge="none"
        android:listSelector="@null"
        android:padding="0.0dip"
        android:scrollingCache="true" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <Button
                android:id="@id/btn_checkin_card"
                android:layout_width="wrap_content"
                android:layout_height="48.0dip"
                android:layout_weight="1.0"
                android:text="@string/add_user"
                android:textColor="#000000" />

            <Button
                android:id="@id/btn_checkin_back"
                android:layout_width="wrap_content"
                android:layout_height="48.0dip"
                android:layout_weight="1.0"
                android:text="@string/btn_back_mouse_watch"
                android:textColor="#000000" />

            <Button
                android:id="@id/btn_checkin_submit"
                android:layout_width="wrap_content"
                android:layout_height="48.0dip"
                android:layout_weight="1.0"
                android:text="@string/check_in_sub"
                android:textColor="#000000"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>