<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:paddingLeft="15dip"
  android:paddingRight="15dip"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/login_bg">
  <LinearLayout 
    android:orientation="horizontal" 
    android:gravity="center_vertical" 
    android:layout_height="wrap_content" 
    android:layout_width="match_parent">
    <TextView 
      android:layout_gravity="center_vertical" 
      android:paddingLeft="7.0dip"
      android:layout_width="wrap_content" 
      android:layout_height="35dip" 
      android:layout_marginRight="15.0dip" 
      android:textColor="#ffffff"
      android:layout_marginTop="15.0dip"
      style="@style/text_content_white"
      android:text="@string/tv_place_data_cust_name" />       
      
    <TextView 
      android:layout_gravity="center_vertical" 
      android:paddingLeft="7.0dip"
      android:id="@id/tagpage_custom"
      android:layout_width="match_parent" 
      android:layout_height="35dip" 
      android:layout_marginRight="15.0dip" 
      android:textColor="#ffffff"
      android:layout_marginTop="15.0dip"
      style="@style/text_content_white"
      android:text="" />       
  </LinearLayout>
  <LinearLayout android:orientation="horizontal" 
    android:gravity="center_vertical" 
    android:layout_height="wrap_content" android:layout_width="match_parent">
    <TextView 
      android:layout_gravity="center_vertical" 
      android:paddingLeft="7.0dip"
      android:layout_width="wrap_content" 
      android:layout_height="35dip" 
      android:layout_marginRight="15.0dip" 
      android:textColor="#ffffff"
      android:layout_marginTop="15.0dip"
      style="@style/text_content_white"
      android:text="@string/position_card" />       
      
    <TextView 
      android:layout_gravity="center_vertical" 
      android:paddingLeft="7.0dip"
      android:id="@id/tagpage_position"
      android:layout_width="match_parent" 
      android:layout_height="35dip" 
      android:layout_marginRight="15.0dip" 
      android:textColor="#ffffff"
      android:layout_marginTop="15.0dip"
      style="@style/text_content_white"
      android:text="" />       
  </LinearLayout>
  
  <TextView android:textAppearance="?android:textAppearanceLarge" 
    android:gravity="center_vertical" 
    android:id="@id/public_title" 
    android:paddingLeft="7.0dip" 
    android:paddingRight="7.0dip" 
    android:layout_marginTop="15.0dip" 
    android:text="@string/check_point"
    style="@style/text_content_white"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:minHeight="40.0px" 
    android:singleLine="true" />
    
        <include android:layout_marginLeft="2dip" 
            android:layout_marginRight="2dip"
            android:layout_marginTop="1dip"
            android:layout_width="match_parent" 
            layout="@layout/public_gridview" 
            android:layout_height="match_parent"/>
    
</LinearLayout>
